# StreamBase

./: .gitignore  README.md  StreamBase.cpp  StreamBase.sln
Client/: CMakeLists.txt  StreamBaseClient.sln
Client/StreamBaseClient/: CMakeLists.txt  StreamBaseClient.cpp  StreamBaseClient.h  StreamBaseClient.vcxproj  StreamBaseClient.vcxproj.filters  main.cpp
Common/: StreamBaseCommonHeader.h  StreamBaseCommonObject.cpp  StreamBaseCommonObject.h
Server/: CMakeLists.txt  StreamBaseServer.sln
Server/StreamBaseServer/: CMakeLists.txt  StreamBaseObjectHolder.cpp  StreamBaseObjectHolder.h  StreamBaseServer.cpp  StreamBaseServer.h  StreamBaseServer.vcxproj  StreamBaseServer.vcxproj.filters  main.cpp
StreamBase/: StreamBase.cpp  StreamBase.vcxproj  StreamBase.vcxproj.filters
